@@ -43,7 +43,6 @@ import org.vineflower.kotlin.util.ProtobufFlags;
 
 import java.io.IOException;
 import java.util.*;
-import java.util.stream.Collectors;
 
 public class KotlinWriter implements StatementWriter {
   private static final Set<String> ERROR_DUMP_STOP_POINTS = new HashSet<>(Arrays.asList(
@@ -97,8 +96,7 @@ public class KotlinWriter implements StatementWriter {
     ClassWrapper wrapper = node.getWrapper();
     if (wrapper == null) {
       buffer.append("/* $VF: Couldn't be decompiled. Class " + node.classStruct.qualifiedName + " wasn't processed yet! */");
-      List<String> lines = new ArrayList<>();
-      lines.addAll(KotlinWriter.getErrorComment());
+      List<String> lines = new ArrayList<>(KotlinWriter.getErrorComment());
       for (String line : lines) {
         buffer.append("//");
         if (!line.isEmpty()) buffer.append(' ').append(line);
@@ -132,8 +130,7 @@ public class KotlinWriter implements StatementWriter {
       buffer.append("// $VF: Couldn't be decompiled");
       buffer.appendLineSeparator();
       if (DecompilerContext.getOption(IFernflowerPreferences.DUMP_EXCEPTION_ON_ERROR)) {
-        List<String> lines = new ArrayList<>();
-        lines.addAll(KotlinWriter.getErrorComment());
+        List<String> lines = new ArrayList<>(KotlinWriter.getErrorComment());
         collectErrorLines(t, lines);
         for (String line : lines) {
           buffer.append("//");
@@ -216,12 +213,25 @@ public class KotlinWriter implements StatementWriter {
       ConstantPool pool = cl.getPool();
 
       KotlinChooser.setContextVariables(cl);
+      KotlinDecompilationContext.KotlinType current = KotlinDecompilationContext.getCurrentType();
 
       DecompilerContext.getLogger().startWriteClass(cl.qualifiedName);
 
       KProperty.Data propertyData = KProperty.parse(node);
       Map<StructMethod, KFunction> functions = KFunction.parse(node);
       KConstructor.Data constructorData = KConstructor.parse(node);
+
+      ProtoBuf.Class proto = KotlinDecompilationContext.getCurrentClass();
+
+      ProtobufFlags.Class kotlinFlags;
+      if (proto != null) {
+        kotlinFlags = new ProtobufFlags.Class(proto.getFlags());
+      } else {
+        if (KotlinDecompilationContext.getCurrentType() == null) {
+          appendComment(buffer, "Class flags could not be determined", indent);
+        }
+        kotlinFlags = new ProtobufFlags.Class(0);
+      }
 
       if (DecompilerContext.getOption(IFernflowerPreferences.SOURCE_FILE_COMMENTS)) {
         StructSourceFileAttribute sourceFileAttr = node.classStruct
@@ -237,24 +247,73 @@ public class KotlinWriter implements StatementWriter {
         }
       }
 
-      if (cl.hasModifier(CodeConstants.ACC_ANNOTATION)) {
+      if (kotlinFlags.kind == ProtoBuf.Class.Kind.ANNOTATION_CLASS || cl.hasModifier(CodeConstants.ACC_ANNOTATION)) {
         // Kotlin's annotation classes are treated quite differently from other classes
         writeAnnotationDefinition(node, buffer, indent, propertyData, functions, constructorData);
         return;
       }
 
-      if (KotlinDecompilationContext.getCurrentType() == KotlinDecompilationContext.KotlinType.FILE) {
+      if (current == KotlinDecompilationContext.KotlinType.FILE) {
         writeKotlinFile(node, buffer, indent, propertyData, functions); // no constructors in top level file
         return;
       }
 
+      Optional<ClassNode> companion;
+      if (current == KotlinDecompilationContext.KotlinType.CLASS && KotlinDecompilationContext.getCurrentClass().hasCompanionObjectName()) {
+        String name = KotlinDecompilationContext.getNameResolver().resolve(KotlinDecompilationContext.getCurrentClass().getCompanionObjectName());
+        companion = node.nested.stream()
+          .filter(n -> n.simpleName.equals(name))
+          .findAny();
+      } else {
+        companion = Optional.empty();
+      }
+
       // write class definition
-      writeClassDefinition(node, buffer, indent, constructorData);
+      writeClassDefinition(node, buffer, indent, constructorData, kotlinFlags);
+
+      TextBuffer innerBuffer = new TextBuffer();
 
       boolean hasContent = false;
       boolean enumFields = false;
 
       List<StructRecordComponent> components = cl.getRecordComponents();
+
+      Set<StructField> fieldsToIgnore = new HashSet<>();
+      Set<StructMethod> methodsToIgnore = new HashSet<>();
+
+      if (propertyData != null) {
+        fieldsToIgnore.addAll(propertyData.associatedFields());
+        methodsToIgnore.addAll(propertyData.associatedMethods());
+      }
+
+      for (KFunction function : functions.values()) {
+        if (function.defaultArgs().getDefaultMethod() != null) {
+          methodsToIgnore.add(function.defaultArgs().getDefaultMethod());
+        }
+      }
+
+      if (constructorData != null) {
+        for (KConstructor constructor : constructorData.constructors().values()) {
+          if (constructor.defaultArgs().getDefaultMethod() != null) {
+            methodsToIgnore.add(constructor.defaultArgs().getDefaultMethod());
+          }
+        }
+      }
+
+      if (companion.isPresent()) {
+        ClassNode companionNode = companion.get();
+        KotlinChooser.setContextVariables(companionNode.classStruct);
+
+        KProperty.Data companionPropertyData = KProperty.parse(companionNode);
+        Map<StructMethod, KFunction> companionFunctions = KFunction.parse(companionNode);
+
+        if (companionPropertyData != null) {
+          fieldsToIgnore.addAll(companionPropertyData.associatedFields());
+          methodsToIgnore.addAll(companionPropertyData.associatedMethods());
+        }
+
+        methodsToIgnore.addAll(companionFunctions.keySet());
+      }
 
       // FIXME: fields don't have line mappings
       // fields
@@ -283,7 +342,9 @@ public class KotlinWriter implements StatementWriter {
 
       for (StructField fd : cl.getFields()) {
         boolean hide = fd.isSynthetic() && DecompilerContext.getOption(IFernflowerPreferences.REMOVE_SYNTHETIC) ||
-          wrapper.getHiddenMembers().contains(InterpreterUtil.makeUniqueKey(fd.getName(), fd.getDescriptor())) || deferredEnumFields.contains(fd);
+          wrapper.getHiddenMembers().contains(InterpreterUtil.makeUniqueKey(fd.getName(), fd.getDescriptor())) ||
+          deferredEnumFields.contains(fd) ||
+          fieldsToIgnore.contains(fd);
         if (hide) continue;
 
         if (components != null && fd.getAccessFlags() == (CodeConstants.ACC_FINAL | CodeConstants.ACC_PRIVATE) &&
@@ -295,56 +356,65 @@ public class KotlinWriter implements StatementWriter {
         boolean isEnum = fd.hasModifier(CodeConstants.ACC_ENUM) && DecompilerContext.getOption(IFernflowerPreferences.DECOMPILE_ENUM);
         if (isEnum) {
           if (enumFields) {
-            buffer.append(',').appendLineSeparator();
+            innerBuffer.append(',').appendLineSeparator();
           }
           enumFields = true;
         } else if (enumFields) {
-          buffer.append(';');
-          buffer.appendLineSeparator();
-          buffer.appendLineSeparator();
+          innerBuffer.append(';');
+          innerBuffer.appendLineSeparator();
+          innerBuffer.appendLineSeparator();
           enumFields = false;
-
-          // If the fields after are non enum, readd the fields found scattered throughout the enum
-          for (StructField fd2 : deferredEnumFields) {
-            TextBuffer fieldBuffer = new TextBuffer();
-            writeField(wrapper, cl, fd2, fieldBuffer, indent + 1);
-            fieldBuffer.clearUnassignedBytecodeMappingData();
-            buffer.append(fieldBuffer);
-          }
         }
 
-        if (propertyData == null || !propertyData.associatedFields.contains(fd.getName())) {
+        if (propertyData == null || enumFields) { // Enum fields are not considered Kotlin properties
           TextBuffer fieldBuffer = new TextBuffer();
           writeField(wrapper, cl, fd, fieldBuffer, indent + 1);
           fieldBuffer.clearUnassignedBytecodeMappingData();
-          buffer.append(fieldBuffer);
+          innerBuffer.append(fieldBuffer);
 
           hasContent = true;
         }
       }
 
-      if (enumFields) {
-        buffer.append(';').appendLineSeparator();
+      if (propertyData != null) {
+        // Any deferred fields that are property fields should be removed to prevent duplication
+        deferredEnumFields.removeAll(propertyData.associatedFields());
 
-        // If we end with enum fields, readd the fields found mixed in
-        for (StructField fd2 : deferredEnumFields) {
-          TextBuffer fieldBuffer = new TextBuffer();
-          writeField(wrapper, cl, fd2, fieldBuffer, indent + 1);
-          fieldBuffer.clearUnassignedBytecodeMappingData();
-          buffer.append(fieldBuffer);
+        boolean addedLineAtEnd = false;
+        for (KProperty prop : propertyData.properties()) {
+          if (hasContent) {
+            innerBuffer.appendLineSeparator();
+          }
+
+          TextBuffer propBuffer = prop.stringify(indent + 1);
+
+          boolean isMultiline = propBuffer.countLines() >= 1; // countLines() counts occurrences of the newline separator, so it's one less than the actual number of lines
+
+          if (isMultiline && hasContent && !addedLineAtEnd) {
+            innerBuffer.appendLineSeparator();
+          }
+
+          innerBuffer.append(propBuffer);
+
+          if (isMultiline) {
+            innerBuffer.appendLineSeparator();
+          }
+
+          addedLineAtEnd = isMultiline;
+          hasContent = true;
+        }
+
+        if (!addedLineAtEnd && !propertyData.properties().isEmpty()) {
+          innerBuffer.appendLineSeparator();
         }
       }
 
-      if (propertyData != null && !propertyData.properties.isEmpty()) {
-        if (hasContent) {
-          buffer.appendLineSeparator();
-        }
-
-        for (KProperty prop : propertyData.properties) {
-          buffer.append(prop.stringify(indent + 1));
-        }
-
-        hasContent = true;
+      // If any fields remaining were deferred but not enum fields, re-add them
+      for (StructField fd2 : deferredEnumFields) {
+        TextBuffer fieldBuffer = new TextBuffer();
+        writeField(wrapper, cl, fd2, fieldBuffer, indent + 1);
+        fieldBuffer.clearUnassignedBytecodeMappingData();
+        innerBuffer.append(fieldBuffer);
       }
 
       // methods
@@ -355,27 +425,34 @@ public class KotlinWriter implements StatementWriter {
           mt.hasModifier(CodeConstants.ACC_BRIDGE) && DecompilerContext.getOption(IFernflowerPreferences.REMOVE_BRIDGE) ||
           wrapper.getHiddenMembers().contains(InterpreterUtil.makeUniqueKey(mt.getName(), mt.getDescriptor())) ||
           mt.getName().equals("<init>") && mt.getDescriptor().equals("(Lkotlin/jvm/internal/DefaultConstructorMarker;)V") ||
-          propertyData != null && propertyData.associatedMethods.contains(InterpreterUtil.makeUniqueKey(mt.getName(), mt.getDescriptor()));
+          companion.map(c -> c.getWrapper().getMethods().containsKey(InterpreterUtil.makeUniqueKey(mt.getName(), mt.getDescriptor()))).orElse(false) && mt.hasModifier(CodeConstants.ACC_STATIC) ||
+          methodsToIgnore.contains(mt);
         if (hide) continue;
 
         KFunction function = functions.get(mt);
         if (function != null) {
           if (hasContent) {
-            buffer.appendLineSeparator();
+            innerBuffer.appendLineSeparator();
           }
           hasContent = true;
-          buffer.append(function.stringify(indent + 1));
+          innerBuffer.append(function.stringify(indent + 1));
           continue;
         }
 
         if (constructorData != null) {
-          KConstructor constructor = constructorData.constructors.get(mt);
+          KConstructor constructor = constructorData.constructors().get(mt);
           if (constructor != null) {
-            if (hasContent) {
-              buffer.appendLineSeparator();
+            TextBuffer ctorBuffer = new TextBuffer();
+            boolean ctorSkipped = !constructor.stringify(ctorBuffer, indent + 1);
+            if (!ctorSkipped) {
+              if (hasContent) {
+                innerBuffer.appendLineSeparator();
+              }
+              hasContent = true;
+              innerBuffer.append(ctorBuffer);
             }
-            hasContent |= constructor.stringify(buffer, indent + 1);
-            continue;
+
+            continue; // Skip writing the constructor as a method, even if nothing was written
           }
         }
 
@@ -383,10 +460,10 @@ public class KotlinWriter implements StatementWriter {
         boolean methodSkipped = !writeMethod(node, mt, i, methodBuffer, indent + 1);
         if (!methodSkipped) {
           if (hasContent) {
-            buffer.appendLineSeparator();
+            innerBuffer.appendLineSeparator();
           }
           hasContent = true;
-          buffer.append(methodBuffer);
+          innerBuffer.append(methodBuffer);
         }
       }
 
@@ -400,18 +477,27 @@ public class KotlinWriter implements StatementWriter {
           if (hide) continue;
 
           if (hasContent) {
-            buffer.appendLineSeparator();
+            innerBuffer.appendLineSeparator();
           }
-          writeClass(inner, buffer, indent + 1);
+          writeClass(inner, innerBuffer, indent + 1);
 
           hasContent = true;
         }
       }
 
-      buffer.appendIndent(indent).append('}');
+      if (!innerBuffer.containsOnlyWhitespaces()) {
+        // Only add braces if a class body is present
+        buffer.append(" {")
+          .appendLineSeparator()
+          .append(innerBuffer)
+          .appendIndent(indent)
+          .append("}");
+      }
+
+      buffer.appendLineSeparator();
 
       if (node.type != ClassNode.Type.ANONYMOUS) {
-        buffer.appendLineSeparator();
+        innerBuffer.appendLineSeparator();
       }
     } finally {
       DecompilerContext.setProperty(DecompilerContext.CURRENT_CLASS_NODE, outerNode);
@@ -422,13 +508,41 @@ public class KotlinWriter implements StatementWriter {
   private void writeKotlinFile(ClassNode node, TextBuffer buffer, int indent, KProperty.Data propertyData, Map<StructMethod, KFunction> functions) {
     ClassWrapper wrapper = node.getWrapper();
     StructClass cl = wrapper.getClassStruct();
+    
+    boolean hasContent = false;
 
-    for (KProperty property : propertyData.properties) {
-      buffer.append(property.stringify(indent));
+    if (propertyData != null && !propertyData.properties().isEmpty()) {
+      boolean addedLineAtEnd = false;
+      for (KProperty prop : propertyData.properties()) {
+        if (hasContent) {
+          buffer.appendLineSeparator();
+        }
+
+        TextBuffer propBuffer = prop.stringify(indent);
+
+        boolean isMultiline = propBuffer.countLines() >= 1;
+
+        if (!addedLineAtEnd && isMultiline && hasContent) {
+          buffer.appendLineSeparator();
+        }
+
+        buffer.append(propBuffer);
+
+        if (isMultiline) {
+          buffer.appendLineSeparator();
+        }
+
+        addedLineAtEnd = isMultiline;
+        hasContent = true;
+      }
+      
+      if (!addedLineAtEnd) {
+        buffer.appendLineSeparator();
+      }
     }
 
     for (StructField fd : cl.getFields()) {
-      if (propertyData.associatedFields.contains(fd.getName())) continue;
+      if (propertyData.associatedFields().contains(fd)) continue;
 
       TextBuffer fieldBuffer = new TextBuffer();
       writeField(wrapper, cl, fd, fieldBuffer, indent);
@@ -436,26 +550,32 @@ public class KotlinWriter implements StatementWriter {
       buffer.append(fieldBuffer);
     }
 
-    if (!cl.getFields().isEmpty()) {
-      buffer.appendLineSeparator();
-    }
-
     for (int i = 0; i < cl.getMethods().size(); i++) {
       StructMethod mt = cl.getMethods().get(i);
       if (functions.containsKey(mt)) {
+        if (hasContent) {
+          buffer.appendLineSeparator();
+        }
+        hasContent = true;
+
         buffer.append(functions.get(mt).stringify(indent));
-        buffer.appendLineSeparator();
         continue;
       }
 
-      String key = InterpreterUtil.makeUniqueKey(mt.getName(), mt.getDescriptor());
-      if (mt.getName().equals("<clinit>") || propertyData.associatedMethods.contains(key)) continue;
+      if (mt.getName().equals("<clinit>") || propertyData.associatedMethods().contains(mt)) continue;
 
       TextBuffer methodBuffer = new TextBuffer();
-      writeMethod(node, mt, i, methodBuffer, indent);
-      methodBuffer.clearUnassignedBytecodeMappingData();
-      buffer.append(methodBuffer, node.simpleName, mt.getName() + " " + mt.getDescriptor());
-      buffer.appendLineSeparator();
+      boolean written = writeMethod(node, mt, i, methodBuffer, indent);
+
+      if (written) {
+        if (hasContent) {
+          buffer.appendLineSeparator();
+        }
+
+        methodBuffer.clearUnassignedBytecodeMappingData();
+        buffer.append(methodBuffer, node.simpleName, mt.getName() + " " + mt.getDescriptor());
+        hasContent = true;
+      }
     }
 
     for (ClassNode inner : node.nested) {
@@ -465,6 +585,7 @@ public class KotlinWriter implements StatementWriter {
     }
   }
 
+  //TODO update this to use Kotlin's metadata
   private void writeAnnotationDefinition(ClassNode node, TextBuffer buffer, int indent, KProperty.Data propertyData, Map<StructMethod, KFunction> functions, KConstructor.Data constructorData) {
     ClassWrapper wrapper = node.getWrapper();
     StructClass cl = wrapper.getClassStruct();
@@ -495,31 +616,31 @@ public class KotlinWriter implements StatementWriter {
       .append("(")
       .appendLineSeparator();
 
-    List<KProperty> nonParameterProperties = new ArrayList<>(propertyData.properties);
+    List<KProperty> nonParameterProperties = new ArrayList<>(propertyData.properties());
 
     boolean first = true;
-    for (KParameter param : constructorData.primary.parameters) {
+    for (KParameter param : constructorData.primary().parameters()) {
       if (!first) {
         buffer.append(",").appendLineSeparator();
       }
       first = false;
       buffer.appendIndent(indent + 1)
         .append("val ")
-        .append(KotlinWriter.toValidKotlinIdentifier(param.name))
+        .append(KotlinWriter.toValidKotlinIdentifier(param.name()))
         .append(": ")
-        .append(param.type.stringify(indent + 1));
+        .append(param.type().stringify(indent + 1));
 
       // Because Kotlin really doesn't like making this easy for us, defaults are still passed directly via attributes
-      KProperty prop = propertyData.properties.stream()
-        .filter(p -> p.name.equals(param.name))
+      KProperty prop = propertyData.properties().stream()
+        .filter(p -> p.name().equals(param.name()))
         .findFirst()
         .orElseThrow();
 
       nonParameterProperties.remove(prop);
 
-      KPropertyAccessor getter = prop.getter;
+      KPropertyAccessor getter = prop.getter();
       if (getter != null) {
-        StructMethod mt = getter.underlyingMethod.methodStruct;
+        StructMethod mt = getter.underlyingMethod().methodStruct;
         StructAnnDefaultAttribute paramAttr = mt.getAttribute(StructGeneralAttribute.ATTRIBUTE_ANNOTATION_DEFAULT);
         if (paramAttr != null) {
           Exprent kExpr = KUtils.replaceExprent(paramAttr.getDefaultValue());
@@ -582,11 +703,7 @@ public class KotlinWriter implements StatementWriter {
     buffer.appendLineSeparator();
   }
 
-  private static boolean isGenerated(int flags) {
-    return (flags & (CodeConstants.ACC_SYNTHETIC | CodeConstants.ACC_MANDATED)) != 0;
-  }
-
-  private void writeClassDefinition(ClassNode node, TextBuffer buffer, int indent, KConstructor.Data constructorData) {
+  private void writeClassDefinition(ClassNode node, TextBuffer buffer, int indent, KConstructor.Data constructorData, ProtobufFlags.Class kotlinFlags) {
     if (node.type == ClassNode.Type.ANONYMOUS) {
       buffer.append(" {").appendLineSeparator();
       return;
@@ -597,16 +714,9 @@ public class KotlinWriter implements StatementWriter {
 
     int flags = node.type == ClassNode.Type.ROOT ? cl.getAccessFlags() : node.access;
     boolean isDeprecated = cl.hasAttribute(StructGeneralAttribute.ATTRIBUTE_DEPRECATED);
-    boolean isSynthetic = (flags & CodeConstants.ACC_SYNTHETIC) != 0 || cl.hasAttribute(StructGeneralAttribute.ATTRIBUTE_SYNTHETIC);
     boolean isEnum = DecompilerContext.getOption(IFernflowerPreferences.DECOMPILE_ENUM) && (flags & CodeConstants.ACC_ENUM) != 0;
     boolean isInterface = (flags & CodeConstants.ACC_INTERFACE) != 0;
     boolean isAnnotation = (flags & CodeConstants.ACC_ANNOTATION) != 0;
-    boolean isModuleInfo = (flags & CodeConstants.ACC_MODULE) != 0 && cl.hasAttribute(StructGeneralAttribute.ATTRIBUTE_MODULE);
-    StructPermittedSubclassesAttribute permittedSubClassesAttr = cl.getAttribute(StructGeneralAttribute.ATTRIBUTE_PERMITTED_SUBCLASSES);
-    List<String> permittedSubClasses = permittedSubClassesAttr != null ? permittedSubClassesAttr.getClasses() : Collections.emptyList();
-    boolean isSealed = permittedSubClassesAttr != null && !permittedSubClasses.isEmpty();
-    boolean isFinal = (flags & CodeConstants.ACC_FINAL) != 0;
-    boolean isNonSealed = !isSealed && !isFinal && cl.getVersion().hasSealedClasses() && isSuperClassSealed(cl);
 
     if (isDeprecated) {
       if (!containsDeprecatedAnnotation(cl)) {
@@ -627,18 +737,9 @@ public class KotlinWriter implements StatementWriter {
     appendJvmAnnotations(buffer, indent, cl, isInterface, cl.getPool(), TypeAnnotation.CLASS_TYPE_PARAMETER);
 
 
-    ProtoBuf.Class proto = KotlinDecompilationContext.getCurrentClass();
-    ProtobufFlags.Class kotlinFlags;
-    if (proto != null) {
-      kotlinFlags = new ProtobufFlags.Class(proto.getFlags());
-    } else {
-      appendComment(buffer, "Class flags could not be determined", indent);
-      kotlinFlags = new ProtobufFlags.Class(0);
-    }
-
     buffer.appendIndent(indent);
 
-    if (kotlinFlags.visibility != ProtoBuf.Visibility.PUBLIC) {
+    if (kotlinFlags.visibility != ProtoBuf.Visibility.PUBLIC || DecompilerContext.getOption(KotlinOptions.SHOW_PUBLIC_VISIBILITY)) {
       buffer.append(ProtobufFlags.toString(kotlinFlags.visibility)).append(' ');
     }
 
@@ -667,20 +768,22 @@ public class KotlinWriter implements StatementWriter {
     }
 
     if (isEnum) {
-      buffer.append("enum class ");
+      buffer.append("enum class");
     } else if (isInterface) {
-      buffer.append("interface ");
+      buffer.append("interface");
     } else if (isAnnotation) {
       buffer.append("annotation class");
     } else if (kotlinFlags.kind == ProtoBuf.Class.Kind.OBJECT) {
-      buffer.append("object ");
+      buffer.append("object");
     } else if (kotlinFlags.kind == ProtoBuf.Class.Kind.COMPANION_OBJECT) {
-      buffer.append("companion object ");
+      buffer.append("companion object");
     } else {
-      buffer.append("class ");
+      buffer.append("class");
     }
 
-    buffer.append(toValidKotlinIdentifier(node.simpleName));
+    if (kotlinFlags.kind != ProtoBuf.Class.Kind.COMPANION_OBJECT || !node.simpleName.equals("Companion")) {
+      buffer.append(" ").append(toValidKotlinIdentifier(node.simpleName));
+    }
 
     GenericClassDescriptor descriptor = cl.getSignature();
     if (descriptor != null && !descriptor.fparameters.isEmpty()) {
@@ -690,17 +793,15 @@ public class KotlinWriter implements StatementWriter {
     buffer.pushNewlineGroup(indent, 1);
 
     boolean appendedColon = false;
-    if (!isEnum && !isInterface && cl.superClass != null) {
-      if (constructorData != null && constructorData.primary != null && constructorData.primary.writePrimaryConstructor(buffer, indent)) {
+    if (constructorData != null && constructorData.primary() != null && constructorData.primary().writePrimaryConstructor(buffer, indent)) {
+      appendedColon = true;
+    } else if (!isEnum && !isInterface && cl.superClass != null) {
+      VarType supertype = new VarType(cl.superClass.getString(), true);
+      if (!VarType.VARTYPE_OBJECT.equals(supertype)) {
+        buffer.appendPossibleNewline(" ");
+        buffer.append(": ");
+        buffer.append(ExprProcessor.getCastTypeName(descriptor == null ? supertype : descriptor.superclass));
         appendedColon = true;
-      } else {
-        VarType supertype = new VarType(cl.superClass.getString(), true);
-        if (!VarType.VARTYPE_OBJECT.equals(supertype)) {
-          buffer.appendPossibleNewline(" ");
-          buffer.append(": ");
-          buffer.append(ExprProcessor.getCastTypeName(descriptor == null ? supertype : descriptor.superclass));
-          appendedColon = true;
-        }
       }
     }
 
@@ -724,24 +825,6 @@ public class KotlinWriter implements StatementWriter {
     }
 
     buffer.popNewlineGroup();
-
-    buffer.append(" {").appendLineSeparator();
-  }
-
-  private static boolean isSuperClassSealed(StructClass cl) {
-    if (cl.superClass != null) {
-      StructClass superClass = DecompilerContext.getStructContext().getClass((String) cl.superClass.value);
-      if (superClass != null && superClass.hasAttribute(StructGeneralAttribute.ATTRIBUTE_PERMITTED_SUBCLASSES)) {
-        return true;
-      }
-    }
-    for (String iface : cl.getInterfaceNames()) {
-      StructClass ifaceClass = DecompilerContext.getStructContext().getClass(iface);
-      if (ifaceClass != null && ifaceClass.hasAttribute(StructGeneralAttribute.ATTRIBUTE_PERMITTED_SUBCLASSES)) {
-        return true;
-      }
-    }
-    return false;
   }
 
   public void writeField(ClassWrapper wrapper, StructClass cl, StructField fd, TextBuffer buffer, int indent) {
@@ -804,10 +887,9 @@ public class KotlinWriter implements StatementWriter {
     }
 
     if (initializer != null) {
-      if (isEnum && initializer instanceof NewExprent) {
-        NewExprent expr = (NewExprent) initializer;
-        expr.setEnumConst(true);
-        buffer.append(expr.toJava(indent));
+      if (isEnum && initializer instanceof NewExprent newExpr) {
+        newExpr.setEnumConst(true);
+        buffer.append(newExpr.toJava(indent));
       } else {
         buffer.append(" = ");
 
@@ -992,7 +1074,7 @@ public class KotlinWriter implements StatementWriter {
         boolean extension = varprocName != null && varprocName.startsWith("$this$");
 
         if (extension) {
-          VarType paramType = descriptor != null && descriptor.parameterTypes.size() > 0 ? descriptor.parameterTypes.get(0) : md.params[0];
+          VarType paramType = descriptor != null && !descriptor.parameterTypes.isEmpty() ? descriptor.parameterTypes.get(0) : md.params[0];
           String typeName = KTypes.getKotlinType(paramType);
           boolean isNullable = processParameterAnnotations(buffer, mt, 0);
 
@@ -1039,7 +1121,7 @@ public class KotlinWriter implements StatementWriter {
         }
 
         boolean hasDescriptor = descriptor != null;
-        //mask should now have the Outer.this in it... so this *shouldn't* be nessasary.
+        //mask should now have the Outer.this in it... so this *shouldn't* be necessary.
         //if (init && !isEnum && ((node.access & CodeConstants.ACC_STATIC) == 0) && node.type == ClassNode.CLASS_MEMBER)
         //    index++;
 
@@ -1163,9 +1245,7 @@ public class KotlinWriter implements StatementWriter {
     if (root != null && methodWrapper.decompileError == null) { // check for existence
       try {
         // Avoid generating imports for ObjectMethods during root.toJava(...)
-        if (RecordHelper.isHiddenRecordMethod(cl, mt, root)) {
-          hideMethod = true;
-        } else {
+        if (!RecordHelper.isHiddenRecordMethod(cl, mt, root)) {
           TextBuffer code = root.toJava(indent + 1);
           code.addBytecodeMapping(root.getDummyExit().bytecode);
           hideMethod = code.length() == 0 && hideIfInit;
@@ -1253,7 +1333,7 @@ public class KotlinWriter implements StatementWriter {
   }
 
   private static void collectBytecode(MethodWrapper wrapper, List<String> lines) throws IOException {
-    ClassNode classNode = (ClassNode) DecompilerContext.getContextProperty(DecompilerContext.CURRENT_CLASS_NODE);
+    ClassNode classNode = DecompilerContext.getContextProperty(DecompilerContext.CURRENT_CLASS_NODE);
     StructMethod method = wrapper.methodStruct;
     InstructionSequence instructions = method.getInstructionSequence();
     if (instructions == null) {
@@ -1270,14 +1350,14 @@ public class KotlinWriter implements StatementWriter {
       Instruction instr = instructions.getInstr(idx);
       StringBuilder sb = new StringBuilder();
       String offHex = Integer.toHexString(offset);
-      for (int i = offHex.length(); i < digits; i++) sb.append('0');
+      sb.append("0".repeat(Math.max(0, digits - offHex.length())));
       sb.append(offHex).append(": ");
       if (instr.wide) {
         sb.append("wide ");
       }
       sb.append(TextUtil.getInstructionName(instr.opcode));
       switch (instr.group) {
-        case CodeConstants.GROUP_INVOCATION: {
+        case CodeConstants.GROUP_INVOCATION -> {
           sb.append(' ');
           if (instr.opcode == CodeConstants.opc_invokedynamic && bootstrap != null) {
             appendBootstrapCall(sb, pool.getLinkConstant(instr.operand(0)), bootstrap);
@@ -1287,29 +1367,22 @@ public class KotlinWriter implements StatementWriter {
           for (int i = 1; i < instr.operandsCount(); i++) {
             sb.append(' ').append(instr.operand(i));
           }
-          break;
         }
-        case CodeConstants.GROUP_FIELDACCESS: {
+        case CodeConstants.GROUP_FIELDACCESS -> {
           sb.append(' ');
           appendConstant(sb, pool.getConstant(instr.operand(0)));
-          break;
         }
-        case CodeConstants.GROUP_JUMP: {
+        case CodeConstants.GROUP_JUMP -> {
           sb.append(' ');
           int dest = offset + instr.operand(0);
           String destHex = Integer.toHexString(dest);
-          for (int i = destHex.length(); i < digits; i++) sb.append('0');
+          sb.append("0".repeat(Math.max(0, digits - destHex.length())));
           sb.append(destHex);
-          break;
         }
-        default: {
+        default -> {
           switch (instr.opcode) {
-            case CodeConstants.opc_new:
-            case CodeConstants.opc_checkcast:
-            case CodeConstants.opc_instanceof:
-            case CodeConstants.opc_ldc:
-            case CodeConstants.opc_ldc_w:
-            case CodeConstants.opc_ldc2_w: {
+            case CodeConstants.opc_new, CodeConstants.opc_checkcast, CodeConstants.opc_instanceof,
+                 CodeConstants.opc_ldc, CodeConstants.opc_ldc_w, CodeConstants.opc_ldc2_w -> {
               sb.append(' ');
               PooledConstant constant = pool.getConstant(instr.operand(0));
               if (constant.type == CodeConstants.CONSTANT_Dynamic && bootstrap != null) {
@@ -1317,9 +1390,8 @@ public class KotlinWriter implements StatementWriter {
               } else {
                 appendConstant(sb, constant);
               }
-              break;
             }
-            default: {
+            default -> {
               for (int i = 0; i < instr.operandsCount(); i++) {
                 sb.append(' ').append(instr.operand(i));
               }
@@ -1354,8 +1426,7 @@ public class KotlinWriter implements StatementWriter {
       sb.append("<null constant>");
       return;
     }
-    if (constant instanceof PrimitiveConstant) {
-      PrimitiveConstant prim = ((PrimitiveConstant) constant);
+    if (constant instanceof PrimitiveConstant prim) {
       Object value = prim.value;
       String stringValue = String.valueOf(value);
       if (prim.type == CodeConstants.CONSTANT_Class) {
@@ -1365,8 +1436,7 @@ public class KotlinWriter implements StatementWriter {
       } else {
         sb.append(stringValue);
       }
-    } else if (constant instanceof LinkConstant) {
-      LinkConstant linkConstant = (LinkConstant) constant;
+    } else if (constant instanceof LinkConstant linkConstant) {
       sb.append(linkConstant.classname).append('.').append(linkConstant.elementname).append(' ').append(linkConstant.descriptor);
     }
   }
@@ -1476,7 +1546,7 @@ public class KotlinWriter implements StatementWriter {
   }
 
   public static List<String> getErrorComment() {
-    return Arrays.stream(((String) DecompilerContext.getProperty(IFernflowerPreferences.ERROR_MESSAGE)).split("\n")).filter(s -> !s.isEmpty()).collect(Collectors.toList());
+    return Arrays.stream(((String) DecompilerContext.getProperty(IFernflowerPreferences.ERROR_MESSAGE)).split("\n")).filter(s -> !s.isEmpty()).toList();
   }
 
   private static void appendComment(TextBuffer buffer, String comment, int indent) {
@@ -1575,7 +1645,7 @@ public class KotlinWriter implements StatementWriter {
         }
     }
 
-    if (mb.hasModifier(CodeConstants.ACC_STATIC) && targetType != TypeAnnotation.CLASS_TYPE_PARAMETER && KotlinDecompilationContext.getCurrentType() != KotlinDecompilationContext.KotlinType.FILE) {
+    if (mb.hasModifier(CodeConstants.ACC_STATIC) && targetType != TypeAnnotation.CLASS_TYPE_PARAMETER && KotlinDecompilationContext.getCurrentType() != KotlinDecompilationContext.KotlinType.FILE && !mb.hasModifier(CodeConstants.ACC_ENUM)) {
       buffer.appendIndent(indent).append("@JvmStatic").appendLineSeparator();
     }
     if (mb.hasModifier(CodeConstants.ACC_STRICT)) {
@@ -1588,7 +1658,7 @@ public class KotlinWriter implements StatementWriter {
 
   static boolean isNullable(StructMember mb) {
     for (Key<?> key : ANNOTATION_ATTRIBUTES) {
-      StructAnnotationAttribute attribute = (StructAnnotationAttribute) mb.getAttribute((Key<StructAnnotationAttribute>) key);
+      StructAnnotationAttribute attribute = mb.getAttribute((Key<StructAnnotationAttribute>) key);
       if (attribute != null) {
         return attribute.getAnnotations().stream().anyMatch(annotation -> annotation.getClassName().equals(NULLABLE_ANN_NAME));
       }
@@ -1647,7 +1717,7 @@ public class KotlinWriter implements StatementWriter {
     boolean ret = false;
 
     for (Key<?> key : PARAMETER_ANNOTATION_ATTRIBUTES) {
-      StructAnnotationParameterAttribute attribute = (StructAnnotationParameterAttribute) mt.getAttribute((Key<StructAnnotationParameterAttribute>) key);
+      StructAnnotationParameterAttribute attribute = mt.getAttribute((Key<StructAnnotationParameterAttribute>) key);
       if (attribute != null) {
         List<List<AnnotationExprent>> annotations = attribute.getParamAnnotations();
         if (param < annotations.size()) {
@@ -1672,7 +1742,7 @@ public class KotlinWriter implements StatementWriter {
 
   private static void appendTypeAnnotations(TextBuffer buffer, int indent, StructMember mb, int targetType, int index, Set<String> filter) {
     for (Key<?> key : TYPE_ANNOTATION_ATTRIBUTES) {
-      StructTypeAnnotationAttribute attribute = (StructTypeAnnotationAttribute) mb.getAttribute((Key<StructTypeAnnotationAttribute>) key);
+      StructTypeAnnotationAttribute attribute = mb.getAttribute((Key<StructTypeAnnotationAttribute>) key);
       if (attribute != null) {
         for (TypeAnnotation annotation : attribute.getAnnotations()) {
           if (annotation.isTopLevel() && annotation.getTargetType() == targetType && (index < 0 || annotation.getIndex() == index)) {
@@ -1735,10 +1805,6 @@ public class KotlinWriter implements StatementWriter {
     }
   }
 
-  public static String getModifiers(int flags) {
-    return MODIFIERS.entrySet().stream().filter(e -> (e.getKey() & flags) != 0).map(Map.Entry::getValue).collect(Collectors.joining(" "));
-  }
-
   public static void appendTypeParameters(TextBuffer buffer, List<String> parameters, List<List<VarType>> bounds) {
     buffer.append('<');
 
@@ -1761,15 +1827,5 @@ public class KotlinWriter implements StatementWriter {
     }
 
     buffer.append('>');
-  }
-
-  private static void appendFQClassNames(TextBuffer buffer, List<String> names) {
-    for (int i = 0; i < names.size(); i++) {
-      String name = names.get(i);
-      buffer.appendIndent(2).append(name);
-      if (i < names.size() - 1) {
-        buffer.append(',').appendLineSeparator();
-      }
-    }
   }
 }
